Implement reset t button and redo Rock Paper Scissors logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Rock, Paper, Scissors</h1>
-        <h5>BEST OF 3</h5>
+        <h5 id="result">BEST OF 3</h5>
     </header>
     <div class="container">
         <div class="player">
@@ -37,7 +37,9 @@
             </div>
         </div>
     </div>
-
+    <div class="reset-button">
+        <button id="reset">RESET🔄</button>
+    </div>
     <script src="script.js"></script> 
 </body>
 </html>
